# rag_pdf_reader

./: .gitignore  Makefile  README.md  config.json  pyproject.toml
backend/: main.py
backend/api/: __init__.py
backend/core/: __init__.py  search_agent.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Chat.tsx  PDFViewer.css  PDFViewer.tsx  SettingsModal.tsx
frontend/src/services/: api.ts
pdf_reader/: __init__.py  main.py
pdf_reader/api/: schemas.py
pdf_reader/core/: search_agent.py
pdf_reader/core/evaluation/: datatypes.py
pdf_reader/core/localization/: datatypes.py  find_text.py
pdf_reader/core/retrieval/: chroma.py  datatypes.py
