[project]
name = "pdf_reader"
version = "0.1.0"
readme = "README.md"
description = "RAG-based PDF reader"
authors = [
    {name="Auke Wiggers", email="wiggers.auke@gmail.com"},
]
requires-python = ">=3.11.11"

dependencies = [
    "chromadb>=1.0.12",
    "fastapi >= 0.115.8",
    "fire >= 0.7.0",
    "hydra-core >= 1.3.2",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.25",
    "langchain-huggingface>=0.3.0",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.8",
    "matplotlib >= 3.10.3",
    "numpy >= 2.3.0",
    "ollama>=0.5.1",
    "omegaconf >= 2.3.0",
    "pandas >= 2.2.3",
    "pypdf>=5.6.0",
    "python-multipart>=0.0.19",
    "scipy >= 1.15.3",
    "sentence-transformers>=4.1.0",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
source = ["backend"]
branch = true  

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
